# metal-dialect

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  pixi.toml
examples/control-flow/: CMakeLists.txt
examples/expressions/: CMakeLists.txt
examples/fold/: CMakeLists.txt
examples/memory/: CMakeLists.txt
examples/the-game-of-life/: CMakeLists.txt  main.cpp
examples/utility/: Driver.h
lib/metal/Conversion/: MetalToLLVM.cpp
lib/metal/IR/: MetalOps.cpp
metal-opt/: metal-opt.cpp
scripts/: build-examples.sh  mlir2bin-lib.sh  run-examples.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/metal/metal-opt/: convert-metal-to-llvm.mlir
